--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,4 @@
-= OCamlCC:  Bazel-enabled OCaml toolchain (PoC, alpha)
+= OCamlCC:  Bazel-enabled OCaml toolchain
 :toc: auto
 :toclevels: 3
 
@@ -132,16 +132,18 @@ information.
 Default: `-nopervasives`:: By default the build rules always use
 `-nopervasives`. This requires that otherwise implicit dependencies
 (`stdlib.cmx?a`, `std_exit.cm[o,x]`) be explicitly listed on the
-command line, along with `-open stdlib`.
+command line, along with `-open stdlib`.  The rules do this automatically.
 
-Fine-grained dependencies:: All dependencies are expressed as module
-(or signature) dependencies, rather than archive dependencies. For
-example, `asmcomp:Asmgen` depends on three `Stdlib` submodules. They
-rather than the (archived) library are listed as dependencies. Along
-with archiveless builds and `-nopervasives` , this means that changing
-a `Stdlib` submodule will _not_ force a rebuild of a stdlib archive
-and thus anything that depends on it. Only targets that depend
-directly or indirectly on the changed code will be rebuilt.
+Fine-grained dependencies:: All dependencies are expressed as
+dependencies on module, signature, or library dependencies. Libraries
+are archived by default, so a dependency on a library is equivalent to
+(direct) dependencies on each of its dependencies. For example,
+`asmcomp:Asmgen` depends on three `Stdlib` submodules. They rather
+than the (archived) library are listed as dependencies. Along with
+archiveless builds and `-nopervasives` , this means that changing a
+`Stdlib` submodule will _not_ force a rebuild of a stdlib archive and
+thus anything that depends on it. Only targets that depend directly or
+indirectly on the changed code will be rebuilt.
 
 Dependency types:: The Bazel rules also enforce a rudimentary type
 discipline on dependencies. Signatures may only depend on signatures;
@@ -167,7 +169,7 @@ C toolchain detected and used by `.configure` will be the one seen at
 runtime. The Bazel code sets these configurations at build-time rather
 than configure-time; it derives them from the selected Bazel
 toolchain. This guarantees that the correct C toolchain will be used
-as runtime (that is, when the compilers are run under Bazel's
+at runtime (that is, when the compilers are run under Bazel's
 control). See link:bzl/docs/ocaml_cc_config.adoc[ocamlcc config] for
 more info.
 
@@ -384,383 +386,3 @@ For more information see link:bzl/docs/cross_compilation.adoc[bzl/docs/cross_com
 
 
 
-== The OBazl Build: concepts and structure
-
-WARNING: You must run `./configure` before running Bazel builds.
-
-Just some notes to help the reader of the code:
-
-=== Notation and Terminology
-
-12/01/2022: obsolete terminology, see instead
-link:bzl/docs/terminology.adoc[terminology]
-
-* *bootstrap compiler* (aka boot compiler) - the precompiled `ocamlc`
-  compiler that comes with the distribution, or one produced by the
-  bootstrap build described below. A bootstrap compiler is "vanilla",
-  with a fixed, minimal configuration. Bootstrap compilers are used to
-   compile local compilers.
-
-* *local compiler* - a compiler produced by the bootstrap compiler. May have a custom configuration.
-+
-NOTE: the distinction between bootstrap and local compilers gives us
-two distinct build protocols.
-+
-* *baseline environment* - the bootstrap compiler plus the initial
-   build of the (unedited sources of) the runtime libs and programs
-   (e.g. ocamlrun, ocamllex), plus the initial build of the stdlib.
-   The legacy build system keeps all this sequestered by copying it
-   into `boot/`. Everything except the bootstrap compiler, is built by
-   the bootstrap compiler, so its bytecode is interpretable by the
-   initial build of the runtime. I.e anything the bootstrap compiler
-   builds must be interpreted by the initial build of `ocamlrun`.
-
-* *compiler types* - notation: `(platform>platform)`
-
-  ** platforms: `vm`, `sys` (native arch of the local machine), or a
-     specific architecture name, e.g. `amd64`, `arm`.
-
-  ** OCaml provides four compiler types:
-
-    *** `(vm>vm)` - `ocamlc.byte`
-    *** `(sys>vm)` - `ocamlc.opt`
-    *** `(sys>sys)` - `ocamlopt.opt`
-    *** `(vm>sys)`     - `ocamlopt.byte`
-
-
-=== Build variants: parametric build targets [[parameterized_build_targets]]
-
-The legacy build system defines a different build target for each
-compiler type: `ocamlc.byte`, `ocamlc.opt`, `ocamlopt.byte`, and
-`ocamlopt.opt`, and similarly for other tools. The Bazel program
-treats these as build variants of a single target: `//bin:ocamlcc`.
-The variant built is controlled by configuration settings that may be
-passed on the command line or saved in a `.bazelrc` file.
-
-The runtimes also come in variants: standard, debug, and instrumented.
-Each gets a separate build target in the legacy system, and has a
-separate name (`ocamlrun`, `ocamlrund`, `ocamlruni` etc.). Bazel
-treats these too as variants of a parameterized build target. For
-example, passing `--//runtime:instr` tells Bazel to build
-the instrumented variant of the runtime (i.e. `ocamlruni`)
-
-A consequence of this approach is that different variants are not
-distinguished by name; for example the debug runtime would be
-`ocamlrun` built with debugging enabled, not `ocamlrund`. This should
-be fine during development, where there is no point in building a
-variant you do not plan to use. For distribution, this would require
-that the distribution build include logic to build and rename all
-required variants. Since Bazel is designed for scriptability this
-should not be a problem.
-
-Simultaneous building of multiple variants can be done, but it is not
-a goal for the baseline build program.
-
-
-For example:
-
-* `runtime/libcamlrun.a`
-* `runtime/libcamlrund.a`
-* `runtime/libcamlruni.a`
-* `runtime/libcamlrun_pic.a`
-* `runtime/libcamlrun_shared.a`
-
-NOTE: below we use `libcamlrun*.a` to indicate any of the variants.
-
-In this case OBazl instead defines a single target,
-`//runtime:camlrun`, controlled by a set of build arguments. For
-example, to build a debug version of `libocamlrun.a`:
-
-```
-    $ bazel build runtime:camlrun --//runtime:DEBUG
-```
-
-To build an instrumented version:
-
-```
-    $ bazel build runtime:camlrun --//runtime:INSTRUMENT
-```
-
-NOTE: the current OBazl version does not provide a means of specifying
-some build variations, e.g. .pic or shared.
-
-=== Bootstrapping a Bootstrap Compiler [[bootstrapp]]
-
-==== The Bootstrapping Problem
-
-
-To build a new bootstrap compiler.
-
-In a nutshell:
-
-1. Use the old bootstrap compiler to:
-  ** build a new vm runtime lib (`libcamlrun*.a`) and link it into `boot/`
-  ** build a new runtime pgm (ocamlrun) and copy it to `boot/`
-  ** build a new stdlib copy the files to `boot/`
-+
-This gives us a `boot` directory containing the "old" compiler, runtime, and stdlib.
-+
-2. Then build all the other stuff, using the old runtime, compiler and stdlib
-+
-The new compiler is `./ocamlc`. It was emitted by the bootstrap
-  compiler, so it must be run by `boot/ocamlrun`. But it emits
-  bytecode for `runtime/ocamlrun`, so any program it compiles must be
-  run by `runtime/ocamlrun`.
-+
-The distinction between `boot/ocamlrun` and `runtime/ocamlrun` is
-essential, since the new boot compiler may involve changes to the
-runtime. This might involve changes in the way the interpreter works,
-so there would be changes in the C code in `runtime` as well as
-changes in the OCaml sources of the compiler - for example, in the OCaml
-code in `bytecomp` responsible for emitting bytecode.
-
-The initial (coldstart) build of `ocamlrun` interprets bytecode
-emitted by `boot/ocamlc`. If we change the runtime we do not want to
-copy it into `boot/` since we need that "old" runtime to interpret
-what the boot compiler emits - and we'll need that to run the new
-`ocamlc`, which will be built by the old bootstrap compiler. So we
-leave it in `runtime`. We then use the boot compiler to build a
-new version of `ocamlc`. This version, presumably, is designed to emit
-bytecode for the new runtime.  Obviously we do not want to copy it into `boot`.
-
- So `boot/ocamlrun` was built by the
-bootstrap compiler, and interprets bytecode emitted by
-+
-2. Edit the code, building `coreall`to rebuild the runtime, compiler, tools, etc.
-3. Once the code is good, build a new bootstrap compile by
-  * 
-
-But once we're sure our new version of `ocamlc` works, we will copy it into
-`boot`, overwriting the old version.
-
-==== Legacy bootstrapping
-
-===== coldstart
-
-Targets are `world` and `world.opt`.  Here we address only the former.
-
-```
-world: coldstart
-	$(MAKE) all
-```
-
-```
-COLDSTART:
-	$(MAKE) runtime-all
-	$(MAKE) -C stdlib \
-	  OCAMLRUN='$$(ROOTDIR)/runtime/ocamlrun$(EXE)' \
-	  CAMLC='$$(BOOT_OCAMLC) $(USE_RUNTIME_PRIMS)' all
-	rm -f boot/ocamlrun$(EXE)
-	cp runtime/ocamlrun$(EXE) boot/ocamlrun$(EXE)
-	cd boot; rm -f $(LIBFILES)
-	cd stdlib; cp $(LIBFILES) ../boot
-	cd boot; $(LN) ../runtime/libcamlrun.$(A) .
-```
-
-Target `coldstart` expresses the initial step of any build (bootstrap or local):
-
-1. Build all vm runtime variants (libocamlrun*.a, ocamlrun*.a plus a few other pieces)
-2. Build all stdlib targets (using newly build runtime/ocamlrun and boot/ocamlc)
-3. Delete any previously built `boot/ocamlrun`
-4. Copy `runtime/ocamlrun` to `boot/ocamlrun`
-5. Copy the stdlib files to `boot/`
-6. link newly built vm runtime lib variant (`libcamlrun*.a`) into `boot/`
-
-The result is a `boot` directory containing the "old" (i.e. bootstrap)
-compiler `boot/ocamlc` plus newly a built vm runtime and stdlib.
-
-The build then proceeds with `make all`, which builds the following:
-
-1. Link `runtime/libcamlrun*.a` into  `stlib/`  (why?)
-  ** NB: `stdlib/header.c` is "The launcher for bytecode executables
-     (if #! is not working)", which presumably needs libocamlrun.a.
-2. Build `ocamlc`
-3. `ocamlyacc`
-4. `ocamllex`
-5. etc.
-
-The dev can now edit, then `make coreall`. Note that target `all`
-depends on `coreall`. Target `coreall` builds the "core" system - the
-minimal parts needed for a functioning compiler. Since we're assuming
-that the developer is working on a new bootstrap compiler (and not,
-say the toplevel program `ocaml`) `make coreall` should suffice. It builds:
-
-* vm runtime libs and programs in `runtime/`
-  ** recall that `coldstart` also did this, but it then linked `runtime/libcamlrun*.a` into `boot/`
-  ** also links `runtime/libcamlrun*.a` into `stdlib/`
-* ocamlc
-* ocamllex
-* ocamltools
-  ** ocamlc
-  ** ocamllex
-  ** compilerlibs/ocamlmiddleend.cma
-  ** target `all` in `tools/Makefile`: ocamldep, ocamlprof, ocamlcp, ocamloptp,
-     ocamlmklib, ocamlmktop, ocamlcmt, dumpobj, ocamlobjinfo, primreq,
-     stripdebug, cmpbyt
-* the stdlib - note that this was also built by target `coldstart`
-
-The remaining targets built by `make all` are not essential to working with the compiler:
-
-* `ocaml` - toplevel (repl)
-* otherlibraries: dynlink, str, systhreads, unix, runtime_events (in `otherlibs/`)
-* othertools: target `othertools` in `tools/Makefile`,  builds `ocamlmktop_init.cmo`, ocamltex
-* manpages
-
-Once everything is hunky-dory the bootstrap
-target will build the new bootstrap compiler.
-
-===== The bootstrap step
-
-
-```
-bootstrap: cobaseline
-# utils/config.ml must be restored to config.status's configuration
-# lex/ocamllex$(EXE) was stripped in order to compare it
-	rm -f utils/config.ml lex/ocamllex$(EXE)
-	$(MAKE) all
-```
-
-Target `cobaseline` is the "Core bootstrapping cycle". Bootstrapping
-here involves the notion of "promoting" (i.e. copying) newly built
-stuff into the `boot/` subdir, and recursively (kinda) using the
-compiler to build itself until it reaches a fixed point (where the
-build output is equal to its input).
-
-First step of cobaseline is to "promote" the new compiler and runtime -
-copy (not link) them into `boot`, overwriting the original `ocamlc` (and
-`ocamllex`). It also copies stdlib files into `boot`. (Why?)
-
-Then it rebuilds ocamlc, ocamllex, ocamltools, using the newly
-installed boot compiler, and using the "fixed" config.ml file. Then
-the stdlib is rebuilt with the new compiler and runtime, and these new
-new versions are promoted again. Then the whole shmear (target core)
-is rebuilt.
-
-Note that `bootstrap` depends on `cobaseline`, then runs `make all`, and
-target `all` depends on `coreall`.
-
-What's the difference between `cobaseline` and `coreall`? The former
-makes target `partialclean`, which deletes a bunch of stuff, then
-rebuilds things and "promotes" them. Both build `ocamlc`, `ocamllex`,
-and `ocamltools`, but `cobaseline` does this with flag
-`IN_COREBOOT_CYCLE` enabled. They also both build the stdlib, but
-`cobaseline` does this using `runtime/ocamlrun`, whereas `coreall` does
-it using `boot/ocamlrun`. Why? Remember that the `coldstart` target
-built `runtime/ocamlrun` and then linked it into `boot/`. But
-`bootstrap` then (by running `make all`) rebuilds `runtime/ocamlrun`
-_without_ copying it into `boot`.
-
-(IOW: `boot/ocamlrun` was built with the old bootstrap compiler;
-`runtime/ocamlrun` is built by the new bootstrap compiler?)
-
-(Only `coldstart` copies `runtime/ocamlrun` into `boot/ocamlrun`)
-
-Note that target `bootstrap`, like target `world`, runs `$(MAKE) all`.
-But it depends on `cobaseline` instead of `coldstart`. The former is
-responsible for "promoting" stuff
-
-IMPORTANT: the result of target cobaseline is a new bootstrap compiler,
-not a local compiler.
-
-in the root Makefile:
-
-```
-cobaseline:
-# Promote the new compiler but keep the old runtime
-# This compiler runs on boot/ocamlrun and produces bytecode for
-# runtime/ocamlrun
-	$(MAKE) promote-cross
-
-# Rebuild ocamlc and ocamllex (run on runtime/ocamlrun)
-# utils/config.ml will have the fixed bootstrap configuration
-	$(MAKE) partialclean
-	$(MAKE) IN_COREBOOT_CYCLE=true ocamlc ocamllex ocamltools  # almost same as coreall: actions
-
-	$(MAKE) library-cross   # Rebuild the library (using runtime/ocamlrun ./ocamlc)
-
-        # Promote the new compiler and the new runtime (??? runtime only?)
-	$(MAKE) OCAMLRUN=runtime/ocamlrun$(EXE) promote
-
-# Rebuild the core system
-# utils/config.ml must still have the fixed bootstrap configuration
-	$(MAKE) partialclean
-	$(MAKE) IN_COREBOOT_CYCLE=true core
-# Check if fixpoint reached
-	$(MAKE) compare
-```
-
-NB: target core depends on coldstart, then runs coreall
-
-
-```
-promote-cross: promote-common
-# NOTE: promote-common just repeats some of what target coldstart did
-PROMOTE ?= cp
-promote-common:
-	$(PROMOTE) ocamlc$(EXE) boot/ocamlc
-	$(PROMOTE) lex/ocamllex$(EXE) boot/ocamllex
-	cd stdlib; cp $(LIBFILES) ../boot
-```
-
-```
-# NB: library-cross: is same as library:, except the latter has
-# OCAMLRUN = boot/ocamlrun, which is the ocamlrun copied to boot by
-# target coldstart.  Why?
-
-library-cross:
-	$(MAKE) -C stdlib OCAMLRUN=../runtime/ocamlrun$(EXE) all
-```
-
-```
-promote: PROMOTE = $(OCAMLRUN) tools/stripdebug
-promote: promote-common
-	rm -f boot/ocamlrun$(EXE)
-	cp runtime/ocamlrun$(EXE) boot/ocamlrun$(EXE)
-```
-
-```
-\## remove generated files:
-partialclean::
-	rm -f ocamlopt$(EXE)
-partialclean::
-	rm -f ocaml$(EXE)
-partialclean::
-	rm -f parsing/lexer.ml
-partialclean::
-	rm -f utils/config.ml \
-	      utils/config_main.ml utils/config_main.mli \
-	      utils/config_boot.ml utils/config_boot.mli \
-        utils/domainstate.ml utils/domainstate.mli
-etc.
-```
-
-```
-compare:
-# The core system has to be rebuilt after bootstrap anyway, so strip ocamlc
-# and ocamllex, which means the artefacts should be identical.
-```
-
-==== Bootstrapping under OBazl
-
-With Bazel we can dispense with the business of copying and linking
-files into the `boot` subdirectory.
-
-All we need do is get the dependency structure right, and things will
-always be built in the correct order.
-
-VM builds:
-
-In general: all (OCaml) build targets depend on a runtime (VM) and a
-compiler that runs on it (i.e. a vm>vm compiler).
-
-The stdlib build depends only on the runtime and compiler. Other
-builds depend on the stdlib as well as the runtime and compiler.
-
-The first thing built after the runtime and stdlib is a new `ocamlc` compiler.
-
-
-`utils/config.ml` - special role. Dynamically created from either
-`confg_boot.ml` or `config_main.ml`, depending on flag
-`IN_COREBOOT_CYCLE`.
-
-WARNING: the config stuff is now in link:config[//config]
